# ACE

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  fix-automake.sh
examples/: ER05.p  PF00014-alignment.faa  PF00014.p  lattice-protein-SB.p  neural-recording.p  p7-alignment.fasta  p7-out-learn.fit  p7-out-learn.j  p7-out.j  p7-out.sce  p7.p
scripts/: ACEtools.py  WriteCMSA.m  WriteCMSAbin.m  __init__.py  weightCalculator.c  weightCalculator.mexmaci64
src/: algorithm.cpp  algorithm.h  dataStructures.h  inverse.cpp  inverse.h  io.cpp  io.h  mainACE.cpp  mainQGT.cpp  mainQLS.cpp  mainSCE.cpp  monteCarlo.cpp  monteCarlo.h  mtrnd.h  qGenTest.cpp  qGenTest.h  qLearnSparse.cpp  qLearnSparse.h  sparseInverse.cpp  sparseInverse.h  tools.cpp  tools.h
tests/: inverse_getZ.cpp  tools_L1.cpp  tools_L2.cpp  tools_LInfinity.cpp  tools_eraseInPlace.cpp  tools_innerProduct.cpp  tools_insertInPlace.cpp
